--- a/01_MLP_MNIST.ipynb
+++ b/01_MLP_MNIST.ipynb
@@ -8,8 +8,8 @@
    "source": [
     "# Load Dataset\n",
     "import pandas as pd\n",
-    "train_dataset = pd.read_csv(\"../data/train.csv\")\n",
-    "test_dataset = pd.read_csv(\"../data/test.csv\")"
+    "train_dataset = pd.read_csv(\"../data/MNIST/train.csv\")\n",
+    "test_dataset = pd.read_csv(\"../data/MNIST/test.csv\")"
    ]
   },
   {
@@ -887,7 +887,7 @@
     "        x = x.view(-1, 28 * 28)\n",
     "        x = F.relu(self.input_layer(x))\n",
     "        x = F.relu(self.hidden_layer(x))\n",
-    "        x = F.relu(self.output_layer(x))\n",
+    "        x = self.output_layer(x)\n",
     "        x = F.log_softmax(x, dim = 1)\n",
     "        return x\n",
     "\n",
@@ -910,7 +910,6 @@
     "# Definite Train & Evaluate\n",
     "def train(model, train_loader, optimizer):\n",
     "    model.train()\n",
-    "    train_loss = 0\n",
     "    for batch_idx, (data, target) in enumerate(train_loader):\n",
     "        data, target = data.to(DEVICE), target.to(DEVICE)\n",
     "        optimizer.zero_grad()\n",
@@ -918,8 +917,9 @@
     "        loss = F.cross_entropy(output, target)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "        train_loss += loss.item()\n",
-    "    return train_loss\n",
+    "        \n",
+    "        if batch_idx % 100 == 0:\n",
+    "            print(\"Train Epoch: {} [{}/{} ({:.0f}%)]\\tLoss: {:.6f}\".format(epoch, batch_idx * len(data), len(train_loader.dataset), 100. * batch_idx / len(train_loader), loss.item()))\n",
     "\n",
     "def evaluate(model, valid_loader):\n",
     "    model.eval()\n",
@@ -948,16 +948,86 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[EPOCH: 1] Train Loss: 680.3277, Validation Loss: 0.9176, Validation Accuracy: 66.15 %\n",
-      "[EPOCH: 2] Train Loss: 444.8588, Validation Loss: 0.8160, Validation Accuracy: 68.32 %\n",
-      "[EPOCH: 3] Train Loss: 366.8164, Validation Loss: 0.5023, Validation Accuracy: 83.60 %\n",
-      "[EPOCH: 4] Train Loss: 210.9433, Validation Loss: 0.4057, Validation Accuracy: 86.67 %\n",
-      "[EPOCH: 5] Train Loss: 138.6494, Validation Loss: 0.1859, Validation Accuracy: 95.54 %\n",
-      "[EPOCH: 6] Train Loss: 64.1072, Validation Loss: 0.1840, Validation Accuracy: 95.68 %\n",
-      "[EPOCH: 7] Train Loss: 49.1430, Validation Loss: 0.1755, Validation Accuracy: 96.15 %\n",
-      "[EPOCH: 8] Train Loss: 44.8993, Validation Loss: 0.1782, Validation Accuracy: 96.15 %\n",
-      "[EPOCH: 9] Train Loss: 41.4172, Validation Loss: 0.1948, Validation Accuracy: 96.08 %\n",
-      "[EPOCH: 10] Train Loss: 39.4255, Validation Loss: 0.2047, Validation Accuracy: 95.75 %\n"
+      "Train Epoch: 1 [0/33600 (0%)]\tLoss: 10.849934\n",
+      "Train Epoch: 1 [6400/33600 (19%)]\tLoss: 0.366389\n",
+      "Train Epoch: 1 [12800/33600 (38%)]\tLoss: 0.476255\n",
+      "Train Epoch: 1 [19200/33600 (57%)]\tLoss: 0.211280\n",
+      "Train Epoch: 1 [25600/33600 (76%)]\tLoss: 0.438590\n",
+      "Train Epoch: 1 [32000/33600 (95%)]\tLoss: 0.320813\n",
+      "[EPOCH: 1], \tValidation Loss: 0.2325, \tValidation Accuracy: 93.04 %\n",
+      "\n",
+      "Train Epoch: 2 [0/33600 (0%)]\tLoss: 0.165204\n",
+      "Train Epoch: 2 [6400/33600 (19%)]\tLoss: 0.358141\n",
+      "Train Epoch: 2 [12800/33600 (38%)]\tLoss: 0.234949\n",
+      "Train Epoch: 2 [19200/33600 (57%)]\tLoss: 0.081244\n",
+      "Train Epoch: 2 [25600/33600 (76%)]\tLoss: 0.322048\n",
+      "Train Epoch: 2 [32000/33600 (95%)]\tLoss: 0.170657\n",
+      "[EPOCH: 2], \tValidation Loss: 0.1978, \tValidation Accuracy: 94.64 %\n",
+      "\n",
+      "Train Epoch: 3 [0/33600 (0%)]\tLoss: 0.031155\n",
+      "Train Epoch: 3 [6400/33600 (19%)]\tLoss: 0.072390\n",
+      "Train Epoch: 3 [12800/33600 (38%)]\tLoss: 0.031617\n",
+      "Train Epoch: 3 [19200/33600 (57%)]\tLoss: 0.065284\n",
+      "Train Epoch: 3 [25600/33600 (76%)]\tLoss: 0.299811\n",
+      "Train Epoch: 3 [32000/33600 (95%)]\tLoss: 0.165536\n",
+      "[EPOCH: 3], \tValidation Loss: 0.1737, \tValidation Accuracy: 95.42 %\n",
+      "\n",
+      "Train Epoch: 4 [0/33600 (0%)]\tLoss: 0.183736\n",
+      "Train Epoch: 4 [6400/33600 (19%)]\tLoss: 0.281657\n",
+      "Train Epoch: 4 [12800/33600 (38%)]\tLoss: 0.114637\n",
+      "Train Epoch: 4 [19200/33600 (57%)]\tLoss: 0.093572\n",
+      "Train Epoch: 4 [25600/33600 (76%)]\tLoss: 0.132468\n",
+      "Train Epoch: 4 [32000/33600 (95%)]\tLoss: 0.085521\n",
+      "[EPOCH: 4], \tValidation Loss: 0.1504, \tValidation Accuracy: 95.69 %\n",
+      "\n",
+      "Train Epoch: 5 [0/33600 (0%)]\tLoss: 0.048772\n",
+      "Train Epoch: 5 [6400/33600 (19%)]\tLoss: 0.016224\n",
+      "Train Epoch: 5 [12800/33600 (38%)]\tLoss: 0.028599\n",
+      "Train Epoch: 5 [19200/33600 (57%)]\tLoss: 0.010944\n",
+      "Train Epoch: 5 [25600/33600 (76%)]\tLoss: 0.140863\n",
+      "Train Epoch: 5 [32000/33600 (95%)]\tLoss: 0.014060\n",
+      "[EPOCH: 5], \tValidation Loss: 0.1729, \tValidation Accuracy: 95.67 %\n",
+      "\n",
+      "Train Epoch: 6 [0/33600 (0%)]\tLoss: 0.192837\n",
+      "Train Epoch: 6 [6400/33600 (19%)]\tLoss: 0.109977\n",
+      "Train Epoch: 6 [12800/33600 (38%)]\tLoss: 0.086224\n",
+      "Train Epoch: 6 [19200/33600 (57%)]\tLoss: 0.266080\n",
+      "Train Epoch: 6 [25600/33600 (76%)]\tLoss: 0.161418\n",
+      "Train Epoch: 6 [32000/33600 (95%)]\tLoss: 0.148137\n",
+      "[EPOCH: 6], \tValidation Loss: 0.1538, \tValidation Accuracy: 96.06 %\n",
+      "\n",
+      "Train Epoch: 7 [0/33600 (0%)]\tLoss: 0.080509\n",
+      "Train Epoch: 7 [6400/33600 (19%)]\tLoss: 0.083086\n",
+      "Train Epoch: 7 [12800/33600 (38%)]\tLoss: 0.030250\n",
+      "Train Epoch: 7 [19200/33600 (57%)]\tLoss: 0.071750\n",
+      "Train Epoch: 7 [25600/33600 (76%)]\tLoss: 0.118281\n",
+      "Train Epoch: 7 [32000/33600 (95%)]\tLoss: 0.172647\n",
+      "[EPOCH: 7], \tValidation Loss: 0.1489, \tValidation Accuracy: 96.10 %\n",
+      "\n",
+      "Train Epoch: 8 [0/33600 (0%)]\tLoss: 0.071072\n",
+      "Train Epoch: 8 [6400/33600 (19%)]\tLoss: 0.035473\n",
+      "Train Epoch: 8 [12800/33600 (38%)]\tLoss: 0.009880\n",
+      "Train Epoch: 8 [19200/33600 (57%)]\tLoss: 0.039796\n",
+      "Train Epoch: 8 [25600/33600 (76%)]\tLoss: 0.218168\n",
+      "Train Epoch: 8 [32000/33600 (95%)]\tLoss: 0.066114\n",
+      "[EPOCH: 8], \tValidation Loss: 0.1686, \tValidation Accuracy: 96.19 %\n",
+      "\n",
+      "Train Epoch: 9 [0/33600 (0%)]\tLoss: 0.008271\n",
+      "Train Epoch: 9 [6400/33600 (19%)]\tLoss: 0.014471\n",
+      "Train Epoch: 9 [12800/33600 (38%)]\tLoss: 0.090294\n",
+      "Train Epoch: 9 [19200/33600 (57%)]\tLoss: 0.090160\n",
+      "Train Epoch: 9 [25600/33600 (76%)]\tLoss: 0.149227\n",
+      "Train Epoch: 9 [32000/33600 (95%)]\tLoss: 0.238707\n",
+      "[EPOCH: 9], \tValidation Loss: 0.1968, \tValidation Accuracy: 96.12 %\n",
+      "\n",
+      "Train Epoch: 10 [0/33600 (0%)]\tLoss: 0.011436\n",
+      "Train Epoch: 10 [6400/33600 (19%)]\tLoss: 0.103769\n",
+      "Train Epoch: 10 [12800/33600 (38%)]\tLoss: 0.101213\n",
+      "Train Epoch: 10 [19200/33600 (57%)]\tLoss: 0.018883\n",
+      "Train Epoch: 10 [25600/33600 (76%)]\tLoss: 0.041178\n",
+      "Train Epoch: 10 [32000/33600 (95%)]\tLoss: 0.006432\n",
+      "[EPOCH: 10], \tValidation Loss: 0.1862, \tValidation Accuracy: 95.75 %\n",
+      "\n"
      ]
     }
    ],
@@ -965,9 +1035,9 @@
     "''' Training'''\n",
     "EPOCHS = 10\n",
     "for epoch in range(1, EPOCHS + 1):\n",
-    "    train_loss = train(model, train_loader, optimizer)\n",
+    "    train(model, train_loader, optimizer)\n",
     "    valid_loss, valid_accuracy = evaluate(model, valid_loader)\n",
-    "    print(\"[EPOCH: {}] Train Loss: {:.4f}, Validation Loss: {:.4f}, Validation Accuracy: {:.2f} %\".format(epoch, train_loss, valid_loss, valid_accuracy))"
+    "    print(\"[EPOCH: {}], \\tValidation Loss: {:.4f}, \\tValidation Accuracy: {:.2f} %\\n\".format(epoch, valid_loss, valid_accuracy))"
    ]
   },
   {
@@ -1020,16 +1090,16 @@
     {
      "data": {
       "text/plain": [
-       "[(1, 3153),\n",
-       " (9, 2882),\n",
-       " (7, 2869),\n",
-       " (5, 2842),\n",
-       " (0, 2822),\n",
-       " (2, 2796),\n",
-       " (3, 2728),\n",
-       " (6, 2672),\n",
-       " (4, 2632),\n",
-       " (8, 2604)]"
+       "[(1, 3137),\n",
+       " (3, 2948),\n",
+       " (7, 2886),\n",
+       " (8, 2849),\n",
+       " (6, 2844),\n",
+       " (9, 2823),\n",
+       " (4, 2724),\n",
+       " (2, 2717),\n",
+       " (0, 2636),\n",
+       " (5, 2436)]"
       ]
      },
      "execution_count": 24,
